[package]
name = "red-server"
version = "0.1.0"
authors = ["Viacheslav Greshilov <slovaricheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4.19", features = ["serde"] }
rocket_contrib = { version = "0.4.7", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.70"
red-simulation = { path = "../red-simulation/" }
uuid = { version = "0.6", features = ["serde", "v4"] }
