[package]
name = "red-server"
version = "0.1.0"
authors = ["Viacheslav Greshilov <slovaricheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuidv07"] }
chrono = { version = "0.4.19", features = ["serde"] }
rocket_contrib = { version = "0.4.10", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.72"
red-simulation = { path = "../red-simulation/" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
