[package]
name = "red-simulation"
version = "0.1.4"
authors = ["Viacheslav Greshilov <slovaricheg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.60"
hmac = "0.12.0"
sha2 = "0.10.0"
serde_json = "1.0.72"
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Performance"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
rand = "0.8.4"

[profile.release]
opt-level = "s"
panic = "abort"
